# auroralbndrytools

./: CITATION.cff  README.rst  TODO.md  pyproject.toml
auroralbndrytools/: __init__.py  bndrytools3d.py  utils.py
auroralbndrytools/examples/: 01__ellipse.py
src/: bndrytools3d.py  utils.py
